--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -95,6 +95,14 @@
         width: 300px;
         text-align: center;
     }
+    .img {
+        width: 100%;
+    }
+    
+    .img:hover {
+        width: 350px;
+        transition: 0.5s;
+    }
     /*  cierre servicios  */
 
 
