--- a/scss/layout/_mediaqueries.scss
+++ b/scss/layout/_mediaqueries.scss
@@ -13,6 +13,7 @@
     .box_main{
         flex-direction: column;
         align-items: center;
+        justify-items: center;
         flex-wrap: wrap;
     }
     .titulo{
